@@ -16,17 +16,17 @@
 
 syntax = "proto2";
 
-import "protos/perfetto/config/data_source_config.proto";
-import "protos/perfetto/common/builtin_clock.proto";
-
 package perfetto.protos;
+
+import "protos/perfetto/common/builtin_clock.proto";
+import "protos/perfetto/config/data_source_config.proto";
 
 // The overall config that is used when starting a new tracing session through
 // ProducerPort::StartTracing().
 // It contains the general config for the logging buffer(s) and the configs for
 // all the data source being enabled.
 //
-// Next id: 33.
+// Next id: 34.
 message TraceConfig {
   message BufferConfig {
     optional uint32 size_kb = 1;
@@ -426,8 +426,15 @@ message TraceConfig {
   // provided. The filter is applied at ReadBuffers() time and works both in the
   // case of IPC readback and write_into_file. This filter can be generated
   // using `tools/proto_filter -s schema.proto -F filter_out.bytes` or
-  // `-T filter_out.escaped_string` (for .pbtx).
-  // Introduced in Android S. See go/trace-filtering for design.
-  message TraceFilter { optional bytes bytecode = 1; }
-  optional TraceFilter trace_filter = 32;
+  // `-T filter_out.escaped_string` (for .pbtx). See go/trace-filtering for
+  // design.
+  //
+  // Introduced in Android S, but it was broken (b/195065199). Reintroduced in
+  // Android T with a different field number.
+  message TraceFilter {
+    optional bytes bytecode = 1;
+  }
+  // old field number for trace_filter
+  reserved 32;
+  optional TraceFilter trace_filter = 33;
 }
